# nfac-hws

./: .gitignore  .pre-commit-config.yaml  .swp  file1.txt  hw.py  main.py  pyproject.toml  requirements.txt
My_venv/: pyvenv.cfg
New_project/: example.txt  read_file.py  write_file.py
New_project/New_project_venv/: pyvenv.cfg
New_venv/: pyvenv.cfg
aiohttp/: aiohttp_server.py  client.py  data.csv  movies.csv  movies.json  pagination.py  repository.py
aiohttp/repositories/: base_repository.py  csv_repository.py  json_repository.py
hw-15/: hw.py
hws/: api-http.py  hw.py  pyproject.toml  test_hw.py
hws/Ascii-Art/: main.py  shadow.txt  standard.txt  test.txt  test_ascii_art.py
hws/ascii/: ascii_art.py  ascii_letters.json  main.py
hws/hw-10-11-doctorrin-master/: hw.py  hw_bonus.py  test_hw.py
hws/hw-12-doctorrin-master/: hw.py  hw_bonus.py  test_hw.py
hws/hw-15/: hw.py  hw_bonus.py  test_hw.py
hws/hw-7-updated-doctorrin-master/: hw.py  hw_bonus.py  test_hw_bonus.py
hws/hw-8/: hw.py
hws/hw-8-updated-doctorrin-master/: hw.py  hw_bonus.py
hws/hw-9-doctorrin-master/: hw.py  hw_bonus.py  test_hw.py
hws/hw-python-1/: ex1.py  ex10.py  ex11.py  ex12.py  ex2.py  (+15 more)
lectures/: aiohttp_server.py  async_prog.py  asyncpg.py  books.csv  comprehension.py  fastapi.py  gen.py  imperative_vs_declarative.py  main.py  math.py  oop.py  random.py  repository.py  singleton.py  sql_repository.py  try_except.py  variables_vision_zone.py
my_project/: pyproject.toml
my_project/my_project/: ascii.py
my_project/tests/: test_ascii.py  test_example.py
myenv/: pyvenv.cfg
(+72 files in other folders)
