[tool.poetry]
name = "nfac-hws"
version = "0.1.0"
description = ""
authors = ["Nurtas <nurtasmuhanbetov91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
numpy = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
